Panel rejestracji, poprawa formatu polskich liter

--- a/app/panelRegister.html
+++ b/app/panelRegister.html
@@ -9,14 +9,14 @@
             <input placeholder="E-mail" ng-model="Email" required="required" name="uEmail" type="email"/><i class="fa fa-envelope-o"></i>
           </div>
           <div class="panelRegister__formwrapper">
-            <input placeholder="HasÅ‚o" ng-model="Password" required="required" name="uPassword" type="password"/><i class="fa fa-lock"></i>
+            <input placeholder="Hasło" ng-model="Password" required="required" name="uPassword" type="password"/><i class="fa fa-lock"></i>
           </div>
           <div class="panelRegister__formwrapper">
-            <input placeholder="PowtÃ³rz hasÅ‚o" ng-model="PasswordAgain" required="required" name="uPasswordAgain" type="password"/><i class="fa fa-lock"></i>
+            <input placeholder="Powtórz hasło" ng-model="PasswordAgain" required="required" name="uPasswordAgain" type="password"/><i class="fa fa-lock"></i>
           </div>
           <button>Zarajestuj</button>
         </div>
-        <div ng-hide="sendForm" class="panelRegister__navigation">Masz juÅ¼ konto?<a href="/#/login" class="panelRegister__ToLogin">Zaloguj siÄ™.</a></div>
+        <div ng-hide="sendForm" class="panelRegister__navigation">Masz już konto?<a href="/#/login" class="panelRegister__ToLogin">Zaloguj się.</a></div>
         <div ng-show="sendForm" class="panelDodajAutobus__dataLoader">
           <div ng-hide="CallbackServera" class="panelDodajAutobus__dataLoader__svg">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 80 80" xml:space="preserve">
@@ -39,14 +39,14 @@
             <input placeholder="E-mail" ng-model="Email" required="required" name="uEmail" type="email"/><i class="fa fa-envelope-o"></i>
           </div>
           <div class="panelRegister__formwrapper">
-            <input placeholder="HasÅ‚o" ng-model="Password" required="required" name="uPassword" type="password"/><i class="fa fa-lock"></i>
+            <input placeholder="Hasło" ng-model="Password" required="required" name="uPassword" type="password"/><i class="fa fa-lock"></i>
           </div>
           <div class="panelRegister__formwrapper">
             <input placeholder="Token" ng-model="Token" required="required" name="uToken" type="text"/><i class="fa fa-lock"></i>
           </div>
           <button>Aktywuj</button>
         </div>
-        <div ng-hide="sendForm" class="panelRegister__navigation">Masz juÅ¼ konto?<a href="/#/login" class="panelRegister__ToLogin">Zaloguj siÄ™.</a></div>
+        <div ng-hide="sendForm" class="panelRegister__navigation">Masz już konto?<a href="/#/login" class="panelRegister__ToLogin">Zaloguj się.</a></div>
         <div ng-show="sendForm" class="panelDodajAutobus__dataLoader">
           <div ng-hide="CallbackServera" class="panelDodajAutobus__dataLoader__svg">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 80 80" xml:space="preserve">
