--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
                     <div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></a></li>
             <li class="header__item"><a href="#/busstop"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></a></li>
-            <li class="header__item"><a href="#/roads"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="#/track"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></a></li>
             <li class="header__item"><a href="#/user"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></a></li>
@@ -122,7 +122,7 @@
               </div>
             </info-window>
             <!--Markery przystanków-->
-            <marker ng-repeat="b in busstopMarker" position="{{b.Position}}" id="{{b.Id}}" animation="DROP" on-click="showBusstop(event, b)" icon="/img/favicon/bus-marker.png"></marker>
+            <marker ng-repeat="b in busstopMarker" position="{{b.Position}}" id="{{b.Id}}" animation="DROP" on-click="showBusstop(event, b)" icon="blocks/googleMaps/src/busstopMarker.png"></marker>
           </ng-map>
         </div>
       </div>
