--- a/app/panelUsers.html
+++ b/app/panelUsers.html
@@ -1,73 +1,1 @@
-
-<div class="panelUsers">
-  <div class="panelUsers__title">Zarządzanie Użytkownikami</div>
-  <div class="panelUsers__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="/#/user">Zarządzanie Użytkownikami</a></span></div>
-  <div class="panelUsers__wrapper">
-    <div class="panelUsers__subtitle">Użytkownicy Systemu</div>
-    <div class="panelUsers__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <div class="panelUsers__navigation"><a href="/#/user/add" class="panelUsers__navigation__item">Dodaj Użytkownika</a></div>
-    <div class="panelUsers__filtrs">
-      <div class="panelUsers__filtr">
-        <label>Email</label>
-        <input placeholder="Szukaj Użytkownika..." ng-model="userFilter.Email"/>
-      </div>
-      <div class="panelUsers__filtr">
-        <label>Ranga</label>
-        <select ng-model="userFilter.Rank">
-          <option value="">Ranga</option>
-          <option value="0">Użytkownik</option>
-          <option value="1">Kontroler</option>
-          <option value="2">Administrator</option>
-        </select>
-      </div>
-      <div class="panelUsers__filtr">
-        <label>Status</label>
-        <select ng-model="userFilter.Activated">
-          <option value="">Status</option>
-          <option value="0">Nieaktywny</option>
-          <option value="1">Aktywny</option>
-        </select>
-      </div>
-      <div class="panelUsers__table">
-        <table wt-responsive-table="wt-responsive-table" ng-controller="UserController" class="responsive">
-          <tr>
-            <th>Email</th>
-            <th>Ranga</th>
-            <th>Status</th>
-            <th>Zarządzanie</th>
-          </tr>
-          <tr ng-repeat="user in users | filter:userFilter | filter:{ Activated: '!false'} as filtrowaneUsers">
-            <td>{{ user.Email }}</td>
-            <td>{{ user.RankName }}</td>
-            <td>{{ user.StatusName }}</td>
-            <td><a href="/#/user/show/{{ user.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/user/delete/{{ user.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
-          </tr>
-          <tr ng-hide="filtrowaneUsers.length">
-            <td colspan="4" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-    <div class="panelUsers__subtitle">Nieaktywni Użytkownicy</div>
-    <div class="panelUsers__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <div class="panelUsers__table">
-      <table wt-responsive-table="wt-responsive-table" ng-controller="UserController" class="responsive">
-        <tr>
-          <th>Email</th>
-          <th>Ranga</th>
-          <th>Status</th>
-          <th>Zarządzanie</th>
-        </tr>
-        <tr ng-repeat="user in users | filter:userFilter | filter:{ Activated: 'false'} as filtrowaneUsersNieaktywni">
-          <td>{{ user.Email }}</td>
-          <td>{{ user.RankName }}</td>
-          <td>{{ user.StatusName }}</td>
-          <td><a href="/#/user/show/{{ user.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/user/delete/{{ user.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
-        </tr>
-        <tr ng-hide="filtrowaneUsersNieaktywni.length">
-          <td colspan="4" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
-        </tr>
-      </table>
-    </div>
-  </div>
-</div>
+<div class="panelUsers"><div class="panelUsers__title">Zarządzanie Użytkownikami</div><div class="panelUsers__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="/#/user">Zarządzanie Użytkownikami</a></span></div><div class="panelUsers__wrapper"><div class="panelUsers__subtitle">Użytkownicy Systemu</div><div class="panelUsers__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div><div class="panelUsers__navigation"><a href="/#/user/add" class="panelUsers__navigation__item">Dodaj Użytkownika</a></div><div class="panelUsers__filtrs"><div class="panelUsers__filtr"><label>Email</label><input placeholder="Szukaj Użytkownika..." ng-model="userFilter.Email"/></div><div class="panelUsers__filtr"><label>Ranga</label><select ng-model="userFilter.Rank"><option value="">Ranga</option><option value="0">Użytkownik</option><option value="1">Kontroler</option><option value="2">Administrator</option></select></div><div class="panelUsers__filtr"><label>Status</label><select ng-model="userFilter.Activated"><option value="">Status</option><option value="0">Nieaktywny</option><option value="1">Aktywny</option></select></div><div class="panelUsers__table"><table wt-responsive-table="wt-responsive-table" ng-controller="UserController" class="responsive"><tr><th>Email</th><th>Ranga</th><th>Status</th><th>Zarządzanie</th></tr><tr ng-repeat="user in users | filter:userFilter | filter:{ Activated: '!false'} as filtrowaneUsers"><td>{{ user.Email }}</td><td>{{ user.RankName }}</td><td>{{ user.StatusName }}</td><td><a href="/#/user/show/{{ user.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/user/delete/{{ user.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td></tr><tr ng-hide="filtrowaneUsers.length"><td colspan="4" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td></tr></table></div></div><div class="panelUsers__subtitle">Nieaktywni Użytkownicy</div><div class="panelUsers__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div><div class="panelUsers__table"><table wt-responsive-table="wt-responsive-table" ng-controller="UserController" class="responsive"><tr><th>Email</th><th>Ranga</th><th>Status</th><th>Zarządzanie</th></tr><tr ng-repeat="user in users | filter:userFilter | filter:{ Activated: 'false'} as filtrowaneUsersNieaktywni"><td>{{ user.Email }}</td><td>{{ user.RankName }}</td><td>{{ user.StatusName }}</td><td><a href="/#/user/show/{{ user.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/user/delete/{{ user.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td></tr><tr ng-hide="filtrowaneUsersNieaktywni.length"><td colspan="4" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td></tr></table></div></div></div>
