--- a/app/panelAutobusy.html
+++ b/app/panelAutobusy.html
@@ -1,1 +1,116 @@
-<div class="panelAutobusy"><div class="panelAutobusy__title">Zarządzanie Autobusami</div><div class="panelAutobusy__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="#/bus">Zarządzanie Autobusami</a></span></div><div class="panelAutobusy__wrapper"><div ng-hide="sendForm" class="panelAutobusy__navigation"><a href="#/bus/add" class="panelAutobusy__navigation__item">Dodaj Autobus</a></div><div ng-hide="sendForm" class="panelAutobusy__filtrs"><div class="panelAutobusy__filtr"><label>Numer Rejestracyjny</label><input type="text" ng-model="autobusFilter.BusNumber" placeholder="Szukaj Autobusu..."/></div><div class="panelAutobusy__filtr"><label>Numer VIN</label><input type="text" ng-model="autobusFilter.RegistrationNumber" placeholder="VIN Autobusu..."/></div><div class="panelAutobusy__filtr"><label>Typ autobusu</label><select ng-model="autobusFilter.BusType"><option value="">Typ</option><option value="0">Normalny</option><option value="1">Przegubowy</option></select></div><div class="panelAutobusy__filtr"><label>Status</label><select ng-model="autobusFilter.BusStatus"><option value="">Status</option><option value="0">Nieaktywny</option><option value="1">W zajezdni</option><option value="2">W trasie</option></select></div><div class="panelAutobusy__filtr"><label>Biletomat</label><select ng-model="autobusFilter.GotMachineValue"><option value="">Biletomat</option><option value="0">Nie</option><option value="1">Tak</option></select></div></div><div ng-hide="sendForm" class="panelAutobusy__subtitle">Aktualna flota autobusów</div><div ng-hide="sendForm" class="panelAutobusy__table"><table wt-responsive-table="wt-responsive-table" ng-controller="BusController" class="responsive"><thead><tr><th>Numer Rejestracyjny</th><th>Numer VIN</th><th>Typ Autobusu</th><th>Status</th><th>Biletomat</th><th>Zarządzanie</th></tr></thead><tbody><tr ng-repeat="autobus in autobusy | filter:autobusFilter | filter:{ BusStatus: '!0'} as filtrowaneAutobusy"><td>{{ autobus.RegistrationNumber }}</td><td>{{ autobus.BusNumber}}</td><td>{{ autobus.BusTypeName }}</td><td>{{ autobus.BusStatusName }}</td><td>{{ autobus.GotMachineName }}</td><td><a href="#/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="#/bus/show/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="#/bus/delete/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td></tr><tr ng-hide="filtrowaneAutobusy.length"><td colspan="6" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td></tr></tbody></table></div><div ng-hide="sendForm" class="panelAutobusy__subtitle">Autobusy nie wprowadzone do służby</div><div ng-hide="sendForm" class="panelAutobusy__table"><table wt-responsive-table="wt-responsive-table" ng-controller="BusController" class="responsive"><thead><tr><th>Numer Rejestracyjny</th><th>Numer VIN</th><th>Typ Autobusu</th><th>Status</th><th>Biletomat</th><th>Zarządzanie</th></tr></thead><tbody><tr ng-repeat="autobus in autobusy | filter:autobusFilter | filter:{ BusStatus: 0 } as filtrowaneAutobusyNieaktywne"><td>{{ autobus.RegistrationNumber }}</td><td>{{ autobus.BusNumber}}</td><td>{{ autobus.BusTypeName }}</td><td>{{ autobus.BusStatusName }}</td><td>{{ autobus.GotMachineName }}</td><td><!--a(href="#/").navigation--><!--  i.ionicons.ion-ios-location--><a href="#/bus/show/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="#/bus/restore/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-android-add-circle -green"></i></a></td></tr><tr ng-hide="filtrowaneAutobusyNieaktywne.length"><td colspan="6" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td></tr></tbody></table></div><div ng-show="sendForm" class="panelAutobusy__dataLoader"><div ng-hide="CallbackServera" class="panelAutobusy__dataLoader__svg"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 80 80" xml:space="preserve"><path fill="#00aef0" d="M10,40c0,0,0-0.4,0-1.1c0-0.3,0-0.8,0-1.3c0-0.3,0-0.5,0-0.8c0-0.3,0.1-0.6,0.1-0.9c0.1-0.6,0.1-1.4,0.2-2.1                        c0.2-0.8,0.3-1.6,0.5-2.5c0.2-0.9,0.6-1.8,0.8-2.8c0.3-1,0.8-1.9,1.2-3c0.5-1,1.1-2,1.7-3.1c0.7-1,1.4-2.1,2.2-3.1                        c1.6-2.1,3.7-3.9,6-5.6c2.3-1.7,5-3,7.9-4.1c0.7-0.2,1.5-0.4,2.2-0.7c0.7-0.3,1.5-0.3,2.3-0.5c0.8-0.2,1.5-0.3,2.3-0.4l1.2-0.1                        l0.6-0.1l0.3,0l0.1,0l0.1,0l0,0c0.1,0-0.1,0,0.1,0c1.5,0,2.9-0.1,4.5,0.2c0.8,0.1,1.6,0.1,2.4,0.3c0.8,0.2,1.5,0.3,2.3,0.5                        c3,0.8,5.9,2,8.5,3.6c2.6,1.6,4.9,3.4,6.8,5.4c1,1,1.8,2.1,2.7,3.1c0.8,1.1,1.5,2.1,2.1,3.2c0.6,1.1,1.2,2.1,1.6,3.1                        c0.4,1,0.9,2,1.2,3c0.3,1,0.6,1.9,0.8,2.7c0.2,0.9,0.3,1.6,0.5,2.4c0.1,0.4,0.1,0.7,0.2,1c0,0.3,0.1,0.6,0.1,0.9                        c0.1,0.6,0.1,1,0.1,1.4C74,39.6,74,40,74,40c0.2,2.2-1.5,4.1-3.7,4.3s-4.1-1.5-4.3-3.7c0-0.1,0-0.2,0-0.3l0-0.4c0,0,0-0.3,0-0.9                        c0-0.3,0-0.7,0-1.1c0-0.2,0-0.5,0-0.7c0-0.2-0.1-0.5-0.1-0.8c-0.1-0.6-0.1-1.2-0.2-1.9c-0.1-0.7-0.3-1.4-0.4-2.2                        c-0.2-0.8-0.5-1.6-0.7-2.4c-0.3-0.8-0.7-1.7-1.1-2.6c-0.5-0.9-0.9-1.8-1.5-2.7c-0.6-0.9-1.2-1.8-1.9-2.7c-1.4-1.8-3.2-3.4-5.2-4.9                        c-2-1.5-4.4-2.7-6.9-3.6c-0.6-0.2-1.3-0.4-1.9-0.6c-0.7-0.2-1.3-0.3-1.9-0.4c-1.2-0.3-2.8-0.4-4.2-0.5l-2,0c-0.7,0-1.4,0.1-2.1,0.1                        c-0.7,0.1-1.4,0.1-2,0.3c-0.7,0.1-1.3,0.3-2,0.4c-2.6,0.7-5.2,1.7-7.5,3.1c-2.2,1.4-4.3,2.9-6,4.7c-0.9,0.8-1.6,1.8-2.4,2.7                        c-0.7,0.9-1.3,1.9-1.9,2.8c-0.5,1-1,1.9-1.4,2.8c-0.4,0.9-0.8,1.8-1,2.6c-0.3,0.9-0.5,1.6-0.7,2.4c-0.2,0.7-0.3,1.4-0.4,2.1                        c-0.1,0.3-0.1,0.6-0.2,0.9c0,0.3-0.1,0.6-0.1,0.8c0,0.5-0.1,0.9-0.1,1.3C10,39.6,10,40,10,40z"><animatetransform attributetype="xml" attributename="transform" type="rotate" from="0 40 40" to="360 40 40" dur="0.6s" repeatcount="indefinite"></animatetransform></path></svg></div><div class="panelAutobusy__dataLoader__text"><p ng-hide="CallbackServera">{{ message }}</p><a href="#/bus" ng-show="CallbackServeraPositive" class="panelPrzystanki__text success"><div class="panelAutobusy success__text__icon"><i class="fa fa-smile-o"></i></div>{{komunikat}}</a><a href="#/bus" ng-show="CallbackServeraNegative" class="panelPrzystanki__text error"><div class="panelAutobusy success__text__icon"><i class="fa fa-frown-o"></i></div>Coś poszło nie tak...</a></div></div></div></div>
+
+<div class="panelAutobusy">
+  <div class="panelAutobusy__title">Zarządzanie Autobusami</div>
+  <div class="panelAutobusy__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="#/bus">Zarządzanie Autobusami</a></span></div>
+  <div class="panelAutobusy__wrapper">
+    <div ng-hide="sendForm" class="panelAutobusy__navigation"><a href="#/bus/add" class="panelAutobusy__navigation__item">Dodaj Autobus</a></div>
+    <div ng-hide="sendForm" class="panelAutobusy__filtrs">
+      <div class="panelAutobusy__filtr">
+        <label>Numer Rejestracyjny</label>
+        <input type="text" ng-model="autobusFilter.BusNumber" placeholder="Szukaj Autobusu..."/>
+      </div>
+      <div class="panelAutobusy__filtr">
+        <label>Numer VIN</label>
+        <input type="text" ng-model="autobusFilter.RegistrationNumber" placeholder="VIN Autobusu..."/>
+      </div>
+      <div class="panelAutobusy__filtr">
+        <label>Typ autobusu</label>
+        <select ng-model="autobusFilter.BusType">
+          <option value="">Typ</option>
+          <option value="0">Normalny</option>
+          <option value="1">Przegubowy</option>
+        </select>
+      </div>
+      <div class="panelAutobusy__filtr">
+        <label>Status</label>
+        <select ng-model="autobusFilter.BusStatus">
+          <option value="">Status</option>
+          <option value="0">Nieaktywny</option>
+          <option value="1">W zajezdni</option>
+          <option value="2">W trasie</option>
+        </select>
+      </div>
+      <div class="panelAutobusy__filtr">
+        <label>Biletomat</label>
+        <select ng-model="autobusFilter.GotMachineValue">
+          <option value="">Biletomat</option>
+          <option value="0">Nie</option>
+          <option value="1">Tak</option>
+        </select>
+      </div>
+    </div>
+    <div ng-hide="sendForm" class="panelAutobusy__subtitle">Aktualna flota autobusów</div>
+    <div ng-hide="sendForm" class="panelAutobusy__table">
+      <table wt-responsive-table="wt-responsive-table" ng-controller="BusController" class="responsive">
+        <thead>
+          <tr>
+            <th>Numer Rejestracyjny</th>
+            <th>Numer VIN</th>
+            <th>Typ Autobusu</th>
+            <th>Status</th>
+            <th>Biletomat</th>
+            <th>Zarządzanie</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="autobus in autobusy | filter:autobusFilter | filter:{ BusStatus: '!0'} as filtrowaneAutobusy">
+            <td>{{ autobus.RegistrationNumber }}</td>
+            <td>{{ autobus.BusNumber}}</td>
+            <td>{{ autobus.BusTypeName }}</td>
+            <td>{{ autobus.BusStatusName }}</td>
+            <td>{{ autobus.GotMachineName }}</td>
+            <td><a href="#/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="#/bus/show/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="#/bus/delete/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
+          </tr>
+          <tr ng-hide="filtrowaneAutobusy.length">
+            <td colspan="6" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div ng-hide="sendForm" class="panelAutobusy__subtitle">Autobusy nie wprowadzone do służby</div>
+    <div ng-hide="sendForm" class="panelAutobusy__table">
+      <table wt-responsive-table="wt-responsive-table" ng-controller="BusController" class="responsive">
+        <thead>
+          <tr>
+            <th>Numer Rejestracyjny</th>
+            <th>Numer VIN</th>
+            <th>Typ Autobusu</th>
+            <th>Status</th>
+            <th>Biletomat</th>
+            <th>Zarządzanie</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="autobus in autobusy | filter:autobusFilter | filter:{ BusStatus: 0 } as filtrowaneAutobusyNieaktywne">
+            <td>{{ autobus.RegistrationNumber }}</td>
+            <td>{{ autobus.BusNumber}}</td>
+            <td>{{ autobus.BusTypeName }}</td>
+            <td>{{ autobus.BusStatusName }}</td>
+            <td>{{ autobus.GotMachineName }}</td>
+            <td>
+              <!--a(href="#/").navigation-->
+              <!--  i.ionicons.ion-ios-location--><a href="#/bus/show/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="#/bus/restore/{{ autobus.Id }}" class="navigation"><i class="ionicons ion-android-add-circle -green"></i></a>
+            </td>
+          </tr>
+          <tr ng-hide="filtrowaneAutobusyNieaktywne.length">
+            <td colspan="6" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div ng-show="sendForm" class="panelAutobusy__dataLoader">
+      <div ng-hide="CallbackServera" class="panelAutobusy__dataLoader__svg">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 80 80" xml:space="preserve">
+          <path fill="#00aef0" d="M10,40c0,0,0-0.4,0-1.1c0-0.3,0-0.8,0-1.3c0-0.3,0-0.5,0-0.8c0-0.3,0.1-0.6,0.1-0.9c0.1-0.6,0.1-1.4,0.2-2.1                        c0.2-0.8,0.3-1.6,0.5-2.5c0.2-0.9,0.6-1.8,0.8-2.8c0.3-1,0.8-1.9,1.2-3c0.5-1,1.1-2,1.7-3.1c0.7-1,1.4-2.1,2.2-3.1                        c1.6-2.1,3.7-3.9,6-5.6c2.3-1.7,5-3,7.9-4.1c0.7-0.2,1.5-0.4,2.2-0.7c0.7-0.3,1.5-0.3,2.3-0.5c0.8-0.2,1.5-0.3,2.3-0.4l1.2-0.1                        l0.6-0.1l0.3,0l0.1,0l0.1,0l0,0c0.1,0-0.1,0,0.1,0c1.5,0,2.9-0.1,4.5,0.2c0.8,0.1,1.6,0.1,2.4,0.3c0.8,0.2,1.5,0.3,2.3,0.5                        c3,0.8,5.9,2,8.5,3.6c2.6,1.6,4.9,3.4,6.8,5.4c1,1,1.8,2.1,2.7,3.1c0.8,1.1,1.5,2.1,2.1,3.2c0.6,1.1,1.2,2.1,1.6,3.1                        c0.4,1,0.9,2,1.2,3c0.3,1,0.6,1.9,0.8,2.7c0.2,0.9,0.3,1.6,0.5,2.4c0.1,0.4,0.1,0.7,0.2,1c0,0.3,0.1,0.6,0.1,0.9                        c0.1,0.6,0.1,1,0.1,1.4C74,39.6,74,40,74,40c0.2,2.2-1.5,4.1-3.7,4.3s-4.1-1.5-4.3-3.7c0-0.1,0-0.2,0-0.3l0-0.4c0,0,0-0.3,0-0.9                        c0-0.3,0-0.7,0-1.1c0-0.2,0-0.5,0-0.7c0-0.2-0.1-0.5-0.1-0.8c-0.1-0.6-0.1-1.2-0.2-1.9c-0.1-0.7-0.3-1.4-0.4-2.2                        c-0.2-0.8-0.5-1.6-0.7-2.4c-0.3-0.8-0.7-1.7-1.1-2.6c-0.5-0.9-0.9-1.8-1.5-2.7c-0.6-0.9-1.2-1.8-1.9-2.7c-1.4-1.8-3.2-3.4-5.2-4.9                        c-2-1.5-4.4-2.7-6.9-3.6c-0.6-0.2-1.3-0.4-1.9-0.6c-0.7-0.2-1.3-0.3-1.9-0.4c-1.2-0.3-2.8-0.4-4.2-0.5l-2,0c-0.7,0-1.4,0.1-2.1,0.1                        c-0.7,0.1-1.4,0.1-2,0.3c-0.7,0.1-1.3,0.3-2,0.4c-2.6,0.7-5.2,1.7-7.5,3.1c-2.2,1.4-4.3,2.9-6,4.7c-0.9,0.8-1.6,1.8-2.4,2.7                        c-0.7,0.9-1.3,1.9-1.9,2.8c-0.5,1-1,1.9-1.4,2.8c-0.4,0.9-0.8,1.8-1,2.6c-0.3,0.9-0.5,1.6-0.7,2.4c-0.2,0.7-0.3,1.4-0.4,2.1                        c-0.1,0.3-0.1,0.6-0.2,0.9c0,0.3-0.1,0.6-0.1,0.8c0,0.5-0.1,0.9-0.1,1.3C10,39.6,10,40,10,40z">
+            <animatetransform attributetype="xml" attributename="transform" type="rotate" from="0 40 40" to="360 40 40" dur="0.6s" repeatcount="indefinite"></animatetransform>
+          </path>
+        </svg>
+      </div>
+      <div class="panelAutobusy__dataLoader__text">
+        <p ng-hide="CallbackServera">{{ message }}</p><a href="#/bus" ng-show="CallbackServeraPositive" class="panelPrzystanki__text success">
+          <div class="panelAutobusy success__text__icon"><i class="fa fa-smile-o"></i></div>{{komunikat}}</a><a href="#/bus" ng-show="CallbackServeraNegative" class="panelPrzystanki__text error">
+          <div class="panelAutobusy success__text__icon"><i class="fa fa-frown-o"></i></div>Coś poszło nie tak...</a>
+      </div>
+    </div>
+  </div>
+</div>
