Subskrybcja na eventy, przykładowe wykorzystanie

--- a/userReadEventTest.html
+++ b/userReadEventTest.html
@@ -13,3 +13,5 @@
 <script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
 <script src="bower_components/select2/dist/js/select2.js"></script>
 <!-- endbower -->
+
+<script src="fakeRead.js"></script>
