--- a/app/panelTrasy.html
+++ b/app/panelTrasy.html
@@ -16,7 +16,7 @@
         <div ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '1'} as filtrowanetrasy" class="panelTrasy__itemHolder"><a href="/#/Track/Get/{{ trasa.Id }}" class="panelTrasy__item">
             <div class="panelTrasy__number">{{trasa.Id}}</div></a></div>
       </div>
-      <div ng-hide="filtrowanetrasy.length" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</div>
+      <div ng-hide="filtrowanetrasy.length" class="panelTrasy__alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</div>
     </div>
     <div class="panelAutobusy__subtitle">Nieaktywne trasy</div>
     <div class="panelAutobusy__table">
@@ -24,7 +24,7 @@
         <div ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '0'} as filtrowanetrasy" class="panelTrasy__itemHolder"><a href="/#/Track/Get/{{ trasa.Id }}" class="panelTrasy__item">
             <div class="panelTrasy__number">{{trasa.Id}}</div></a></div>
       </div>
-      <div ng-hide="filtrowanetrasy.length" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</div>
+      <div ng-hide="filtrowanetrasy.length" class="panelTrasy__alert">Brak wpisów, proszę zmienić kryteria wyszukiwania!</div>
     </div>
   </div>
 </div>
