--- a/app/panelTrasy.html
+++ b/app/panelTrasy.html
@@ -13,7 +13,7 @@
     <div class="panelAutobusy__subtitle">Aktywne trasy w systemie</div>
     <div ng-controller="TrackController" class="panelAutobusy__table">
       <div class="panelTrasy">
-        <div ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '1'} as filtrowanetrasy" class="panelTrasy__itemHolder"><a href="/#/Track/Get/{{ trasa.Id }}" class="panelTrasy__item">
+        <div ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '1'} as filtrowanetrasy" class="panelTrasy__itemHolder"><a href="/#/track/show/{{ trasa.Id }}" class="panelTrasy__item">
             <div class="panelTrasy__number">{{trasa.Id}}</div></a></div>
       </div>
       <div ng-hide="filtrowanetrasy.length" class="panelTrasy__alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</div>
@@ -21,7 +21,7 @@
     <div class="panelAutobusy__subtitle">Nieaktywne trasy</div>
     <div class="panelAutobusy__table">
       <div class="panelTrasy">
-        <div ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '0'} as filtrowanetrasy" class="panelTrasy__itemHolder"><a href="/#/Track/Get/{{ trasa.Id }}" class="panelTrasy__item">
+        <div ng-repeat="trasa in tracks | filter:trasaFilter | filter:{ StatusValue: '0'} as filtrowanetrasy" class="panelTrasy__itemHolder"><a href="/#/track/show/{{ trasa.Id }}" class="panelTrasy__item">
             <div class="panelTrasy__number">{{trasa.Id}}</div></a></div>
       </div>
       <div ng-hide="filtrowanetrasy.length" class="panelTrasy__alert">Brak wpisów, proszę zmienić kryteria wyszukiwania!</div>
