--- a/app/index.html
+++ b/app/index.html
@@ -122,8 +122,9 @@
                 </table>
               </div>
             </info-window>
+            <directions draggable="true" travel-mode="DRIVING" waypoints="{{wayPoints}}" origin="{{origin}}" destination="{{destination}}" suppress-markers="true"></directions>
             <!--Markery przystanków-->
-            <marker ng-repeat="b in busstopMarker" position="{{b.Position}}" id="{{b.Id}}" on-click="showBusstop(event, b)" animation="DROP" icon="blocks/googleMaps/src/busstopMarker.png"></marker>
+            <marker ng-repeat="b in busstopMarker" position="{{b.Position}}" id="{{b.Id}}" on-click="showBusstop(event, b)" icon="{{markerIcon}}"></marker>
           </ng-map>
         </div>
       </div>
