--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
       <!--Created by salimike on 18.03.16.
       -->
       <div ng-hide="globals.HeaderToHide" class="header">
-        <div class="header__corner"><i class="fa fa-bus"></i></div>
+        <div ng-click="initMapTimeout()" class="header__corner"><i class="fa fa-bus"></i></div>
         <div class="header__switcher -hidden">
           <div class="background"></div>
           <ul class="header__panel">
