--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 <script src="bower_components/imagesloaded/imagesloaded.js"></script>
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
-<script src="bower_components/slick.js/slick/slick.min.js"></script>
+<script src="bower_components/slick.js/slick/slick.js"></script>
 <script src="bower_components/superfish/dist/js/superfish.js"></script>
 <script src="bower_components/superfish/dist/js/hoverIntent.js"></script>
 <script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
@@ -25,6 +25,7 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-responsive-tables/release/angular-responsive-tables.js"></script>
 <!-- endbower -->
+    <!--test-->
     <script src="scripts/vendor.min.js"></script>
     <!--script(src='bower_components/javascript-detect-element-resize/detect-element-resize.js')-->
     <script src="http://maps.google.com/maps/api/js"></script>
@@ -32,6 +33,7 @@
     <!--script(src="bower_components/angular/angular.min.js")-->
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angular-websocket/dist/angular-websocket.js"></script>
     <!--script(src="bower_components/angular-responsive-tables/release/angular-responsive-tables.js")-->
     <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
     <!--script(src="bower_components/responsive-tables-js/dist/responsivetables.js")-->
