--- a/app/panelWyswietlAutobus.html
+++ b/app/panelWyswietlAutobus.html
@@ -53,6 +53,7 @@
           </select>
         </div>
       </div>
+      <div ng-hide="sendForm" class="panelWyswietlAutobus__navigation"><span ng-click="SubskrypcjaAutobusu(AutobusID)" ng-hide="autobus.BusStatus == 0" class="panelWyswietlAutobus__navigation__item greenDark">Obserwuj</span><span ng-click="UnSubskrypcjaAutobusu(AutobusID)" ng-hide="autobus.BusStatus == 0" class="panelWyswietlAutobus__navigation__item red">Nie obserwuj</span></div>
       <div ng-hide="sendForm" class="panelWyswietlAutobus__navigation">
         <button ng-click="updateBus()" class="green panelWyswietlAutobus__navigation__item green">Aktualizuj</button><a href="/#/bus/delete/{{ AutobusID }}" ng-hide="autobus.BusStatus == 0" class="panelWyswietlAutobus__navigation__item red">Dezaktywuj</a><a href="/#/bus/restore/{{ AutobusID }}" ng-show="autobus.BusStatus == 0" class="panelWyswietlAutobus__navigation__item greenDark">Aktywuj</a><a href="/#/bus" class="panelWyswietlAutobus__navigation__item gray -abort">Anuluj</a>
       </div>
