--- a/activitySenderTest.html
+++ b/activitySenderTest.html
@@ -12,6 +12,15 @@
 <script src="bower_components/superfish/dist/js/hoverIntent.js"></script>
 <script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
 <script src="bower_components/select2/dist/js/select2.js"></script>
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+
 <!-- endbower -->
+
+
+
+
+
+<div id="mapid" style="height:500px;"></div>
 
 <script src="fakeDevice.js"></script>
