WebSocket onMessage + Subksypcje poprawione

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body ng-controller="MapController">
-    <div class="sectionMain">
+    <div ng-controller="WebSocket" class="sectionMain">
       <div class="headerholder">
         <!--Created by salimike on 18.03.16.
         -->
