Kursy autoryzacja websoocket subskypcje na kursy

--- a/app/panelWyswietlTrase.html
+++ b/app/panelWyswietlTrase.html
@@ -10,25 +10,27 @@
       <div class="panelWyswietlTrase__columns">
         <div class="panelWyswietlTrase__column">
           <div class="panelWyswietlTrase__title">Przystanki wybranej trasy</div>
-          <div ng-repeat="przystanek in przystankiTrasy" class="panelWyswietlTrase__content">
-            <div class="panelWyswietlTrase__itemBox">
+          <div ng-repeat="przystanek in przystankiTrasy" class="panelWyswietlTrase__content"><a href="#/busstop/show/{{przystanek.Id}}" class="panelWyswietlTrase__itemBox">
               <div class="panelWyswietlTrase__item">
                 <div class="panelWyswietlTrase__itemTitle"><i class="fa fa-map-signs"></i> {{ przystanek.Name }}</div>
                 <div class="panelWyswietlTrase__itemSubtitle">{{ przystanek.LocalizationString }}</div>
-              </div>
-            </div>
-          </div>
+              </div></a></div>
         </div>
         <div class="panelWyswietlTrase__column">
-          <div class="panelWyswietlTrase__title">Aktualne kursy</div>
-          <div class="panelWyswietlTrase__content">
-            <div class="panelWyswietlTrase__itemBox">
+          <div class="panelWyswietlTrase__title">Aktualne Kursy</div>
+          <div ng-repeat="kurs in kursyPoprawne" class="panelWyswietlTrase__content"><a href="#/course/show/{{kurs.Id}}" ng-hide="kurs.Ended" class="panelWyswietlTrase__itemBox">
               <div class="panelWyswietlTrase__item">
-                <div class="panelWyswietlTrase__itemTitle"><i class="fa fa-bus"></i> Autobus nr 1</div>
-                <div class="panelWyswietlTrase__itemSubtitle">Opis</div>
-              </div>
-            </div>
-          </div>
+                <div class="panelWyswietlTrase__itemTitle"><i class="fa fa-bus"></i> Autobus nr {{ kurs.Bus.BusNumber }}</div>
+                <div class="panelWyswietlTrase__itemSubtitle">{{ kurs.EndedName }}</div>
+              </div></a></div>
+        </div>
+        <div class="panelWyswietlTrase__column -width100">
+          <div class="panelWyswietlTrase__title">Zakonczone Kursy</div>
+          <div ng-repeat="kurs in kursyPoprawne" class="panelWyswietlTrase__content"><a href="#/course/show/{{kurs.Id}}" ng-show="kurs.Ended" class="panelWyswietlTrase__itemBox">
+              <div class="panelWyswietlTrase__item">
+                <div class="panelWyswietlTrase__itemTitle"><i class="fa fa-bus"></i> Autobus nr {{ kurs.Bus.BusNumber }}</div>
+                <div class="panelWyswietlTrase__itemSubtitle">{{ kurs.EndedName }}</div>
+              </div></a></div>
         </div>
       </div>
       <div class="panelWyswietlAutobus__navigation"><span ng-click="UsuniecieTrasy(TrackID)" ng-hide="track.IsArchive == 1" class="panelWyswietlAutobus__navigation__item red">Dezaktywuj</span><span ng-click="AktywujTrasy(TrackID)" ng-show="track.IsArchive == 1" class="panelWyswietlAutobus__navigation__item greenDark">Aktywuj</span><a href="/#/track" class="panelWyswietlAutobus__navigation__item gray -abort">Wróć</a></div>
